# txsyxts-player

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  summary.md
src/: app.cpp  app.hpp  ascii_art.cpp  ascii_art.hpp  commands.cpp  commands.hpp  config.cpp  config.hpp  history.cpp  history.hpp  local_playlists.cpp  local_playlists.hpp  login_window.cpp  main.cpp  player.cpp  player.hpp  queue.cpp  queue.hpp  scrobbler.cpp  scrobbler.hpp  sponsorblock.cpp  sponsorblock.hpp  spotify.cpp  spotify.hpp  youtube.cpp  youtube.hpp
